# dlib_vs_py

./: README.md  app.ipynb
cpp/: CMakeLists.txt  kmeans_dlib.cpp  linear_regression_dlib.cpp  mlp_dlib.cpp  svm_dlib.cpp
py/: k_clus.py  lin_reg.py  percep.py  sci_kit_tool.py  sup_vec.py
